syntax = "proto3";

package cfe_clone.api;

option go_package = "apipb";
option java_multiple_files = true;
option java_outer_classname = "InvoiceProto";
option java_package = "com.cfe_clone.api";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

enum Month {
  MONTH_INVALID = 0;
  MONTH_JANUARY = 1;
  MONTH_FEBRUARY = 2;
  MONTH_MARCH = 3;
  MONTH_APRIL = 4;
  MONTH_MAY = 5;
  MONTH_JUNE = 6;
  MONTH_JULY = 7;
  MONTH_AUGUST = 8;
  MONTH_SEPTEMBER = 9;
  MONTH_OCTOBER = 10;
  MONTH_NOVEMBER = 11;
  MONTH_DECEMBER = 12;
}

message Date {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
}

service InvoiceService {
  rpc ListInvoices(ListInvoicesRequest) returns (ListInvoicesResponse) {
    option (google.api.http) = {
      get: "/invoices"
    };
  }
}

message Invoice {
  double total = 1;
  string status = 2;
  Date date_from = 3;
  Date date_to = 4;
  Month month = 5;
  Date expiration_date = 6;
  int32 year = 7;
}

message ListInvoicesRequest {
  string service_number = 1;
}

message ListInvoicesResponse {
  repeated Invoice invoices = 1;
}
